--- a/front/main.html
+++ b/front/main.html
@@ -10,15 +10,15 @@
 <body>
     <div class="main">
         <div class="header">
-            <img src="./assets/bus.png" alt="bus-logo" width="50px">
+            <img src="./assets/bus.png" alt="bus-logo" width="3%">
             <h2 class="txt">Citybus</h2>
             <h2 class="txt">Transport cards</h2>
             <h2 class="txt">Intercity</h2>
             <h2 class="txt">Tickets</h2>
             <h2 class="txt">Companies</h2>
             <div class="header-btns">
-                <a href="#"><img src="./assets/phone.png" alt="phone" width="30px"></a>
-                <a href="#"><img src="./assets/info.png" alt="info" width="30px"></a>
+                <a href="#"><img src="./assets/phone.png" alt="phone" width="90%"></a>
+                <a href="#"><img src="./assets/info.png" alt="info" width="90%"></a>
             </div>
         </div>
 
