--- a/front/main.html
+++ b/front/main.html
@@ -11,18 +11,29 @@
     <div class="main">
         <div class="header">
             <img src="./assets/bus.png" alt="bus-logo" width="3%">
-            <h2 class="txt">Citybus</h2>
-            <h2 class="txt">Transport cards</h2>
-            <h2 class="txt">Intercity</h2>
-            <h2 class="txt">Tickets</h2>
-            <h2 class="txt">Companies</h2>
+            <a class="header-link" href="citybus.html"><h2 class="txt">Citybus</h2></a>
+            <a class="header-link" href="cards.html"><h2 class="txt">Transport cards</h2></a>
+            <a class="header-link" href="intercity.html"><h2 class="txt">Intercity</h2></a>
+            <a class="header-link" href="tickets.html"><h2 class="txt">Tickets</h2></a>
+            <a class="header-link" href="companies.html"><h2 class="txt">Companies</h2></a>
             <div class="header-btns">
                 <a href="#"><img src="./assets/phone.png" alt="phone" width="90%"></a>
                 <a href="#"><img src="./assets/info.png" alt="info" width="90%"></a>
             </div>
         </div>
 
-        <div class="content"></div>
+        <div class="content">
+            <img src="./assets/main-pic.png" alt="bus" width="50%">
+            <div class="content-text">
+                <h1 class="content-txt">All about buses of KZ</h1>
+                <ul>
+                    <li class="content-li content-txt">watch routes of city buses</li>
+                    <li class="content-li content-txt">buy transport cards</li>
+                    <li class="content-li content-txt">buy intercity tickets</li>
+                    <li class="content-li content-txt">see ratings of companies</li>
+                </ul>
+            </div>
+        </div>
 
         <div class="footer">
             <div class="footer-info">
