--- a/front/citybus.html
+++ b/front/citybus.html
@@ -5,22 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bus Station</title>
-    <link rel="stylesheet" href="index.css">
+    <title>Citybus</title>
+    <link rel="stylesheet" href="citybus.css">
 </head>
 
 <body>
+
     <div class="main">
         <div class="header">
             <a class="header-link" href="main.html"><img src="./assets/bus.png" alt="bus-logo" width="80%"></a>
             <a class="header-link" href="citybus.html">
-                <h2 class="txt">Citybus</h2>
+                <h2 class="txt chosen-link">Citybus</h2>
             </a>
             <a class="header-link" href="transport_cards.html">
                 <h2 class="txt">Transport cards</h2>
             </a>
             <a class="header-link" href="intercity.html">
-                <h2 class="chosen-link txt">Intercity</h2>
+                <h2 class="txt">Intercity</h2>
             </a>
             <a class="header-link" href="tickets.html">
                 <h2 class="txt">Tickets</h2>
@@ -32,21 +33,29 @@
                 <a href="#"><img src="./assets/phone.png" alt="phone" width="90%"></a>
                 <a href="#"><img src="./assets/info.png" alt="info" width="90%"></a>
             </div>
-        </div>
-
-        <div class="content">
-            <img src="./assets/main-pic.png" alt="bus" width="50%">
-            <div class="content-text">
-                <h1 class="content-txt">All about buses of KZ</h1>
-                <ul>
-                    <li class="content-li content-txt">watch routes of city buses</li>
-                    <li class="content-li content-txt">buy transport cards</li>
-                    <li class="content-li content-txt">buy intercity tickets</li>
-                    <li class="content-li content-txt">see ratings of companies</li>
-                </ul>
+        </div><br><br>
+        <div class="container">
+            <div class="child1">
+                <a href="route1.html">
+                    <div class="bus1"><img src="./assets/Icon.png" alt=""> <img src="./assets/№ 1.png" alt=""></div>
+                </a>
+                <a href="">
+                    <div class="bus2"><img src="./assets/Icon.png" alt=""> <img src="./assets/№ 2.png" alt=""></div>
+                </a>
+                <a href="">
+                    <div class="bus3"><img src="./assets/Icon.png" alt=""> <img src="./assets/№ 3.png" alt=""></div>
+                </a>
+                <a href="">
+                    <div class="bus4"><img src="./assets/Icon.png" alt=""> <img src="./assets/№ 4.png" alt=""></div>
+                </a>
+                <a href="">
+                    <div class="bus5"><img src="./assets/Icon.png" alt=""> <img src="./assets/№ 5.png" alt=""></div>
+                </a>
+            </div>
+            <div class=" child2 ">
+                <img src="./assets/image2.png" alt="child2" height="400px">
             </div>
         </div>
-
         <div class="footer">
             <div class="footer-info">
                 <h4 class="txt">Bus Station project</h4>
@@ -56,7 +65,6 @@
                 <h4 class="txt">2022</h4>
             </div>
         </div>
-    </div>
 </body>
 
 </html>
