--- a/front/citybus.html
+++ b/front/citybus.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Citybus</title>
     <link rel="stylesheet" href="citybus.css">
+    <link rel="icon" href="./assets/bus.png" type="image/icon type">
 </head>
 
 <body>
