--- a/front/main.html
+++ b/front/main.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bus Station</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="./assets/bus.png" type="image/icon type">
+
 </head>
 
 <body>
@@ -29,8 +31,8 @@
                 <h2 class="txt">Companies</h2>
             </a>
             <div class="header-btns">
-                <a href="#"><img src="./assets/phone.png" alt="phone" width="90%"></a>
-                <a href="#"><img src="./assets/info.png" alt="info" width="90%"></a>
+                <a href="https://t.me/zhaparka" traget="_blank"><img src="./assets/phone.png" alt="phone" width="90%"></a>
+                <a href="https://github.com/adilzhapar/WebMKM-project" target="_blank"><img src="./assets/info.png" alt="info" width="90%"></a>
             </div>
         </div>
 
