--- a/front/school_cards.html
+++ b/front/school_cards.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Citybus</title>
     <link rel="stylesheet" href="school_cards.css">
+    <link rel="icon" href="./assets/bus.png" type="image/icon type">
+
 </head>
 
 <body>
