--- a/front/companies.html
+++ b/front/companies.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bus Station</title>
     <link rel="stylesheet" href="companies.css">
+    <link rel="icon" href="./assets/bus.png" type="image/icon type">
+
 </head>
 
 <body>
