--- a/front/intercity.html
+++ b/front/intercity.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intercity</title>
     <link rel="stylesheet" href="intercity.css">
+    <link rel="icon" href="./assets/bus.png" type="image/icon type">
+
 </head>
 
 <body>
