--- a/front/citybus.html
+++ b/front/citybus.html
@@ -31,8 +31,8 @@
                 <h2 class="txt">Companies</h2>
             </a>
             <div class="header-btns">
-                <a href="#"><img src="./assets/phone.png" alt="phone" width="90%"></a>
-                <a href="#"><img src="./assets/info.png" alt="info" width="90%"></a>
+                <a href="https://t.me/zhaparka" target="_blank"><img src="./assets/phone.png" alt="phone" width="90%"></a>
+                <a href="https://github.com/adilzhapar/WebMKM-project" target="_blank"><img src="./assets/info.png" alt="info" width="90%"></a>
             </div>
         </div><br><br>
         <div class="container">
