--- a/front/school_cards.html
+++ b/front/school_cards.html
@@ -31,9 +31,9 @@
             <a class="header-link " href="companies.html ">
                 <h2 class="txt ">Companies</h2>
             </a>
-            <div class="header-btns ">
-                <a href="# "><img src="./assets/phone.png " alt="phone " width="90% "></a>
-                <a href="# "><img src="./assets/info.png " alt="info " width="90% "></a>
+            <div class="header-btns">
+                <a href="https://t.me/zhaparka" target="_blank"><img src="./assets/phone.png" alt="phone" width="90%"></a>
+                <a href="https://github.com/adilzhapar/WebMKM-project" target="_blank"><img src="./assets/info.png" alt="info" width="90%"></a>
             </div>
         </div>
         <div class="r1 ">Route of bus № 1</div>
