--- a/companies.html
+++ b/companies.html
@@ -14,7 +14,7 @@
 <body>
     <div class="main">
         <div class="header">
-            <a class="header-link" href="main.html"><img src="./assets/bus.png" alt="bus-logo" width="80%"></a>
+            <a class="header-link" href="index.html"><img src="./assets/bus.png" alt="bus-logo" width="80%"></a>
             <a class="header-link" href="citybus.html">
                 <h2 class="txt">Citybus</h2>
             </a>
