--- a/school_cards.html
+++ b/school_cards.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Citybus</title>
-    <link rel="stylesheet" href="route1.css">
+    <link rel="stylesheet" href="school_cards.css">
     <link rel="icon" href="./assets/bus.png" type="image/icon type">
 
 </head>
@@ -15,12 +15,12 @@
 
     <div class="main ">
         <div class="header ">
-            <a class="header-link " href="main.html "><img src="./assets/bus.png " alt="bus-logo " width="80% "></a>
+            <a class="header-link " href="index.html "><img src="./assets/bus.png " alt="bus-logo " width="80% "></a>
             <a class="header-link " href="citybus.html ">
-                <h2 class="txt chosen-link ">Citybus</h2>
+                <h2 class="txt">Citybus</h2>
             </a>
             <a class="header-link " href="transport_cards.html ">
-                <h2 class="txt ">Transport cards</h2>
+                <h2 class="txt chosen-link">Transport cards</h2>
             </a>
             <a class="header-link " href="intercity.html ">
                 <h2 class="txt ">Intercity</h2>
@@ -39,21 +39,18 @@
         <div class="r1 ">Route of bus № 1</div>
         <div class="container">
             <div class="child1">
-                <a href="route1.html">
-                    <div class="bus1"><img src="./assets/location.png" alt=""> Шанырак</div>
+                <a href="transport_cards.html">
+                    <div class="bus1">Regular cards</div>
                 </a>
                 <a href="">
-                    <div class="bus2"><img src="./assets/location.png" alt=""> Абая - Саина</div>
+                    <div class="bus2">School cards</div>
                 </a>
                 <a href=" ">
-                    <div class="bus3 "><img src="./assets/location.png " alt=" "> Дворец Бракосочетание</div>
-                </a>
-                <a href=" ">
-                    <div class="bus4 "><img src="./assets/location.png " alt=" "> Централный стади</div>
+                    <div class="bus3 ">Pension cards</div>
                 </a>
             </div>
-            <div class=" child2 ">
-                <img src="./assets/image2.png " alt="child2 " height="400px ">
+            <div class="child2">
+                <img src="./assets/image 5.png" alt="child2"> <img src="./assets/image 6.png" alt="child2">
             </div>
         </div>
         <div class="footer ">
