--- a/companies.html
+++ b/companies.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bus Station</title>
-    <link rel="stylesheet" href="companies.css">
-    <link rel="icon" href="./assets/bus.png" type="image/icon type">
+    <link rel="stylesheet" href="assets/styles/companies.css">
+    <link rel="icon" href="./assets/imgs/bus.png" type="image/icon type">
 
 </head>
 
 <body>
     <div class="main">
         <div class="header">
-            <a class="header-link" href="index.html"><img src="./assets/bus.png" alt="bus-logo" width="80%"></a>
+            <a class="header-link" href="index.html"><img src="./assets/imgs/bus.png" alt="bus-logo" width="80%"></a>
             <a class="header-link" href="citybus.html">
                 <h2 class="txt">Citybus</h2>
             </a>
@@ -31,14 +31,14 @@
                 <h2 class="chosen-link txt">Companies</h2>
             </a>
             <div class="header-btns">
-                <a href="https://t.me/zhaparka" target="_blank"><img src="./assets/phone.png" alt="phone" width="90%"></a>
-                <a href="https://github.com/adilzhapar/WebMKM-project" target="_blank"><img src="./assets/info.png" alt="info" width="90%"></a>
+                <a href="https://t.me/zhaparka" target="_blank"><img src="./assets/imgs/phone.png" alt="phone" width="90%"></a>
+                <a href="https://github.com/adilzhapar/WebMKM-project" target="_blank"><img src="./assets/imgs/info.png" alt="info" width="90%"></a>
             </div>
         </div>
 
         <div class="content">
             <div class="content-object">
-                <img src="./assets/company_1.jpeg" alt="bus" width="250px">
+                <img src="./assets/imgs/company_1.jpeg" alt="bus" width="250px">
                 <div class="content-line">
                     <div class="content-name">Bus Travel</div>
                     <div class="content-rating">5/5</div>
@@ -46,7 +46,7 @@
                 <div class="content-number">8 (708)123 45 67</div>
             </div>
             <div class="content-object">
-                <img src="./assets/company_2.png" alt="bus" width="250px">
+                <img src="./assets/imgs/company_2.png" alt="bus" width="250px">
                 <div class="content-line">
                     <div class="content-name">Aviato</div>
                     <div class="content-rating">4.7/5</div>
@@ -54,7 +54,7 @@
                 <div class="content-number">8 (777)111 22 32</div>
             </div>
             <div class="content-object">
-                <img src="./assets/company_3.png" alt="bus" width="250px">
+                <img src="./assets/imgs/company_3.png" alt="bus" width="250px">
                 <div class="content-line">
                     <div class="content-name">Kazzhol</div>
                     <div class="content-rating">4.2/5</div>
@@ -62,7 +62,7 @@
                 <div class="content-number">8 (705) 721 34 65</div>
             </div>
             <div class="content-object">
-                <img src="./assets/company_4.jpg" alt="bus" width="250px">
+                <img src="./assets/imgs/company_4.jpg" alt="bus" width="250px">
                 <div class="content-line">
                     <div class="content-name">BusImix</div>
                     <div class="content-rating">3.9/5</div>
