--- a/intercity.html
+++ b/intercity.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intercity</title>
-    <link rel="stylesheet" href="intercity.css">
-    <link rel="icon" href="./assets/bus.png" type="image/icon type">
+    <link rel="stylesheet" href="assets/styles/intercity.css">
+    <link rel="icon" href="./assets/imgs/bus.png" type="image/icon type">
 
 </head>
 
 <body>
     <div class="main">
         <div class="header">
-            <a class="header-link" href="index.html"><img src="./assets/bus.png" alt="bus-logo" width="80%"></a>
+            <a class="header-link" href="index.html"><img src="./assets/imgs/bus.png" alt="bus-logo" width="80%"></a>
             <a class="header-link" href="citybus.html">
                 <h2 class="txt">Citybus</h2>
             </a>
@@ -31,8 +31,8 @@
                 <h2 class="txt">Companies</h2>
             </a>
             <div class="header-btns">
-                <a href="https://t.me/zhaparka" target="_blank"><img src="./assets/phone.png" alt="phone" width="90%"></a>
-                <a href="https://github.com/adilzhapar/WebMKM-project" target="_blank"><img src="./assets/info.png" alt="info" width="90%"></a>
+                <a href="https://t.me/zhaparka" target="_blank"><img src="./assets/imgs/phone.png" alt="phone" width="90%"></a>
+                <a href="https://github.com/adilzhapar/WebMKM-project" target="_blank"><img src="./assets/imgs/info.png" alt="info" width="90%"></a>
             </div>
         </div>
 
