--- a/tickets.html
+++ b/tickets.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bus Station</title>
-    <link rel="stylesheet" href="tickets.css">
-    <link rel="icon" href="./assets/bus.png" type="image/icon type">
+    <link rel="stylesheet" href="assets/styles/tickets.css">
+    <link rel="icon" href="./assets/imgs/bus.png" type="image/icon type">
 
 </head>
 
 <body>
     <div class="main">
         <div class="header">
-            <a class="header-link" href="index.html"><img src="./assets/bus.png" alt="bus-logo" width="80%"></a>
+            <a class="header-link" href="index.html"><img src="./assets/imgs/bus.png" alt="bus-logo" width="80%"></a>
             <a class="header-link" href="citybus.html">
                 <h2 class="txt">Citybus</h2>
             </a>
@@ -31,8 +31,8 @@
                 <h2 class="txt">Companies</h2>
             </a>
             <div class="header-btns">
-                <a href="https://t.me/zhaparka" target="_blank"><img src="./assets/phone.png" alt="phone" width="90%"></a>
-                <a href="https://github.com/adilzhapar/WebMKM-project" target="_blank"><img src="./assets/info.png" alt="info" width="90%"></a>
+                <a href="https://t.me/zhaparka" target="_blank"><img src="./assets/imgs/phone.png" alt="phone" width="90%"></a>
+                <a href="https://github.com/adilzhapar/WebMKM-project" target="_blank"><img src="./assets/imgs/info.png" alt="info" width="90%"></a>
             </div>
         </div>
 
@@ -41,25 +41,25 @@
                 <h3 class="content-address">Almaty - Semei</h3>
                 <h3 class="content-date">13.08.2022</h3>
                 <h5 class="content-company">Bus Travel</h5>
-                <a href=""><img src="./assets/phone.png" alt="phone" width="80%"></a>
+                <a href=""><img src="./assets/imgs/phone.png" alt="phone" width="80%"></a>
             </div>
             <div class="content-object">
                 <h3 class="content-address">Almaty - Taraz</h3>
                 <h3 class="content-date">24.10.2022</h3>
                 <h5 class="content-company">Aviato</h5>
-                <a href=""><img src="./assets/phone.png" alt="phone" width="80%"></a>
+                <a href=""><img src="./assets/imgs/phone.png" alt="phone" width="80%"></a>
             </div>
             <div class="content-object">
                 <h3 class="content-address">Astana - Taraz</h3>
                 <h3 class="content-date">11.11.2022</h3>
                 <h5 class="content-company">Kazzhol</h5>
-                <a href=""><img src="./assets/phone.png" alt="phone" width="80%"></a>
+                <a href=""><img src="./assets/imgs/phone.png" alt="phone" width="80%"></a>
             </div>
             <div class="content-object">
                 <h3 class="content-address">Kokshetau - Aqtobe</h3>
                 <h3 class="content-date">13.12.2022</h3>
                 <h5 class="content-company">BusImix</h5>
-                <a href=""><img src="./assets/phone.png" alt="phone" width="80%"></a>
+                <a href=""><img src="./assets/imgs/phone.png" alt="phone" width="80%"></a>
             </div>
         </div>
 
