--- a/citybus.html
+++ b/citybus.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Citybus</title>
-    <link rel="stylesheet" href="citybus.css">
-    <link rel="icon" href="./assets/bus.png" type="image/icon type">
+    <link rel="stylesheet" href="assets/styles/citybus.css">
+    <link rel="icon" href="./assets/imgs/bus.png" type="image/icon type">
 </head>
 
 <body>
 
     <div class="main">
         <div class="header">
-            <a class="header-link" href="index.html"><img src="./assets/bus.png" alt="bus-logo" width="80%"></a>
+            <a class="header-link" href="index.html"><img src="./assets/imgs/bus.png" alt="bus-logo" width="80%"></a>
             <a class="header-link" href="citybus.html">
                 <h2 class="txt chosen-link">Citybus</h2>
             </a>
@@ -31,30 +31,30 @@
                 <h2 class="txt">Companies</h2>
             </a>
             <div class="header-btns">
-                <a href="https://t.me/zhaparka" target="_blank"><img src="./assets/phone.png" alt="phone" width="90%"></a>
-                <a href="https://github.com/adilzhapar/WebMKM-project" target="_blank"><img src="./assets/info.png" alt="info" width="90%"></a>
+                <a href="https://t.me/zhaparka" target="_blank"><img src="./assets/imgs/phone.png" alt="phone" width="90%"></a>
+                <a href="https://github.com/adilzhapar/WebMKM-project" target="_blank"><img src="./assets/imgs/info.png" alt="info" width="90%"></a>
             </div>
         </div><br><br>
         <div class="container">
             <div class="child1">
                 <a href="route1.html">
-                    <div class="bus1"><img src="./assets/Icon.png" alt=""> <img src="./assets/№ 1.png" alt=""></div>
+                    <div class="bus1"><img src="./assets/imgs/Icon.png" alt=""> <img src="./assets/imgs/№ 1.png" alt=""></div>
                 </a>
                 <a href="">
-                    <div class="bus2"><img src="./assets/Icon.png" alt=""> <img src="./assets/№ 2.png" alt=""></div>
+                    <div class="bus2"><img src="./assets/imgs/Icon.png" alt=""> <img src="./assets/imgs/№ 2.png" alt=""></div>
                 </a>
                 <a href="">
-                    <div class="bus3"><img src="./assets/Icon.png" alt=""> <img src="./assets/№ 3.png" alt=""></div>
+                    <div class="bus3"><img src="./assets/imgs/Icon.png" alt=""> <img src="./assets/imgs/№ 3.png" alt=""></div>
                 </a>
                 <a href="">
-                    <div class="bus4"><img src="./assets/Icon.png" alt=""> <img src="./assets/№ 4.png" alt=""></div>
+                    <div class="bus4"><img src="./assets/imgs/Icon.png" alt=""> <img src="./assets/imgs/№ 4.png" alt=""></div>
                 </a>
                 <a href="">
-                    <div class="bus5"><img src="./assets/Icon.png" alt=""> <img src="./assets/№ 5.png" alt=""></div>
+                    <div class="bus5"><img src="./assets/imgs/Icon.png" alt=""> <img src="./assets/imgs/№ 5.png" alt=""></div>
                 </a>
             </div>
             <div class=" child2 ">
-                <img src="./assets/image2.png" alt="child2" height="400px">
+                <img src="./assets/imgs/image2.png" alt="child2" height="400px">
             </div>
         </div>
         <div class="footer">
