--- a/transport_cards.html
+++ b/transport_cards.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Citybus</title>
-    <link rel="stylesheet" href="transport_cards.css">
-    <link rel="icon" href="./assets/bus.png" type="image/icon type">
+    <link rel="stylesheet" href="assets/styles/transport_cards.css">
+    <link rel="icon" href="./assets/imgs/bus.png" type="image/icon type">
 
 </head>
 
@@ -15,7 +15,7 @@
 
     <div class="main ">
         <div class="header ">
-            <a class="header-link " href="index.html "><img src="./assets/bus.png " alt="bus-logo " width="80% "></a>
+            <a class="header-link " href="index.html "><img src="./assets/imgs/bus.png " alt="bus-logo " width="80% "></a>
             <a class="header-link " href="citybus.html ">
                 <h2 class="txt">Citybus</h2>
             </a>
@@ -32,8 +32,8 @@
                 <h2 class="txt ">Companies</h2>
             </a>
             <div class="header-btns">
-                <a href="https://t.me/zhaparka" target="_blank"><img src="./assets/phone.png" alt="phone" width="90%"></a>
-                <a href="https://github.com/adilzhapar/WebMKM-project" target="_blank"><img src="./assets/info.png" alt="info" width="90%"></a>
+                <a href="https://t.me/zhaparka" target="_blank"><img src="./assets/imgs/phone.png" alt="phone" width="90%"></a>
+                <a href="https://github.com/adilzhapar/WebMKM-project" target="_blank"><img src="./assets/imgs/info.png" alt="info" width="90%"></a>
             </div>
         </div>
         <div class="container">
@@ -49,7 +49,7 @@
                 </a>
             </div>
             <div class="child2">
-                <img src="./assets/image 3.png" alt="child2"> <img src="./assets/image 4.png" alt="child2">
+                <img src="./assets/imgs/image 3.png" alt="child2"> <img src="./assets/imgs/image 4.png" alt="child2">
             </div>
         </div>
         <div class="footer ">
