profile side is ready

--- a/citybus.html
+++ b/citybus.html
@@ -32,7 +32,7 @@
             </a>
             <div class="header-btns">
                 <a href="https://t.me/zhaparka" target="_blank"><img src="./assets/imgs/phone.png" alt="phone" width="90%"></a>
-                <a href="https://github.com/adilzhapar/WebMKM-project" target="_blank"><img src="./assets/imgs/info.png" alt="info" width="90%"></a>
+                <a href="profile.php"><img src="./assets/imgs/info.png" alt="info" width="90%"></a>
             </div>
         </div><br><br>
         <div class="container">
