--- a/transport_cards.html
+++ b/transport_cards.html
@@ -19,13 +19,13 @@
             <a class="header-link " href="citybus.html ">
                 <h2 class="txt">Citybus</h2>
             </a>
-            <a class="header-link " href="transport_cards.html ">
+            <a class="header-link " href="transport_cards.php ">
                 <h2 class="txt chosen-link">Transport cards</h2>
             </a>
-            <a class="header-link " href="intercity.html ">
+            <a class="header-link " href="intercity.php ">
                 <h2 class="txt ">Intercity</h2>
             </a>
-            <a class="header-link " href="tickets.html ">
+            <a class="header-link " href="tickets.php ">
                 <h2 class="txt ">Tickets</h2>
             </a>
             <a class="header-link " href="companies.html ">
