--- a/route1.html
+++ b/route1.html
@@ -22,10 +22,10 @@
             <a class="header-link " href="transport_cards.html ">
                 <h2 class="txt ">Transport cards</h2>
             </a>
-            <a class="header-link " href="intercity.html ">
+            <a class="header-link " href="intercity.php ">
                 <h2 class="txt ">Intercity</h2>
             </a>
-            <a class="header-link " href="tickets.html ">
+            <a class="header-link " href="tickets.php ">
                 <h2 class="txt ">Tickets</h2>
             </a>
             <a class="header-link " href="companies.html ">
